--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,6 @@
       <div id="countdown">..</div>
       <p id="message"></p>
     </div>
-    <script src="../src/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
